--- a/data_analysis_project/data_analysis_project.Rmd
+++ b/data_analysis_project/data_analysis_project.Rmd
@@ -45,6 +45,7 @@ glimpse(spotify_youtube)
 attribute_correlate_stream <- spotify_youtube %>% 
   select(danceability, energy, key, loudness, speechiness, acousticness, instrumentalness, liveness, valence, tempo, stream) %>% 
   filter(complete.cases(.)) %>%
+
 ##Find the correlation coefficient between each attribute and number of spotify streams 
    mutate(
     dance_cor = cor(danceability, stream),
@@ -57,6 +58,7 @@ attribute_correlate_stream <- spotify_youtube %>%
     valence_cor = cor(valence, stream),
     tempo_cor = cor(tempo, stream)
   ) %>% 
+
 ##Find the mean correlation coefficient for each attribute
   summarise(
     mean_dance_cor = mean(dance_cor),
@@ -69,14 +71,14 @@ attribute_correlate_stream <- spotify_youtube %>%
     mean_valence_cor = mean(valence_cor),
     mean_tempo_cor = mean(tempo_cor)
   )
+
 ##Output the highest value among the mean coefficients
 max_value <- apply(attribute_correlate_stream, 1, max)
-  
 ```
 
 **Question 2: Does higher engagement on YouTube videos lead to more streams of the song from the video on Spotify? Is there a relationship that exists between social engagement and streams?**
 
-**Analysis**: In order to find and map out the correlation between Youtube video views and Spotify streams, we first grouped the data by artist and then summarised the data by the sum of views and sum of streams for each artist. After that, we plotted the data into a scatter plot with a line of best fit, which shows that there is a slight positive correlation between number of views on Youtube and number of streams on Spotify. This means that it can be generally true that as one value increases, so does the other. While doing this, we divided the totals by 1,000,000 because the numbers would have been to large to easily grasp. 
+**Analysis**: In order to find and map out the correlation between Youtube video views and Spotify streams, we first grouped the data by artist and then summarised the data by the sum of views and sum of streams for each artist. After that, we plotted the data into a scatter plot with a line of best fit, which shows that there is a slight positive correlation between number of views on YouTube and number of streams on Spotify. This means that it can be generally true that as one value increases, so does the other. While doing this, we divided the totals by 1,000,000 because the numbers would have been to large to easily grasp. We found that for the most part, songs that did well on Spotify tended to do well on YouTube, except for some outliers that either had a higher number of Spotify streams than YouTube views or a higher number of YouTube views than Spotify streams. For example, Maroon 5's lyric video from the studio recording of a performance on The Voice only had 26 views on YouTube but 1,004,576,500 streams on Spotify. Conversely, Kyla's HRVY Official Video had 326,427,602	on YouTube and only 24,160 streams on Spotify. For the songs that had more success on Spotify and less success	 
 
 ```{r}
 ##Code to find the total number of views and streams (divided by 1,000,000 because numbers were too large to work with)
@@ -88,6 +90,7 @@ streams_views <- spotify_youtube %>%
     total_views = sum(views)/1000000,
     total_streams = sum(stream)/1000000,
   )
+
 ##Create a scatterplot with line of best fit
 streams_views %>% 
   ggplot(aes(x=total_streams, y=total_views))+
@@ -95,26 +98,33 @@ streams_views %>%
   theme_minimal()+
   geom_smooth(method = "lm")+
   labs(
-    title = "Correlation between an artist's Spotify Streams and Youtube Views",
+    title = "Correlation between an artist's Spotify Streams and YouTube Views",
     x = "Number of Streams on Spotify",
-    y = "Number of Views on Youtube"
+    y = "Number of Views on YouTube"
   )
 
-##What was happening when that positive relationship wasn't the case, who was successful on Spotify and then not YouTube
+##What was happening when that positive relationship wasn't the case, who was successful on Spotify and then not YouTube and vice versa?
 spotify_youtube %>%
   filter(stream > 10000, views < 5000) %>%
   group_by(artist) %>%
   arrange(desc(stream))
+
+##We had to use 100000 streams since there were little no results with a smaller number of streams
+spotify_youtube %>%
+  filter(views > 10000, stream < 100000) %>%
+  group_by(artist) %>%
+  arrange(desc(views))
 ```
 
 **Question 3: How many videos with a high number of streams are coming from licensed content?**
 
-**Analysis**: Most videos on YouTube with views over 500 million are coming from licensed content. However, we found that there are some outliers. About 54 videos were unlicensed and 15 channels posted unlicensed videos that were also classified as the official video for the track. Some channels say they are official, like Major Lazer Official, and then they only have unlicensed content on the platform. There is no one consistent theme or trend between the channels that have posted unlicensed content, though it seems like some of them are from countries outside of the U.S. or rappers and DJs. Redbox also posted unlicensed videos, which is interesting coming from a company even though it is not as popular anymore. It seems like some channels are definitely repurposing content from an unverified user, like WORLDSTARHIPHOP or perhaps other content is remixes or live performances in the case of DJs. In doing pivot wider, we can filter for licensed and unlicensed content as well as official videos and view the total number of views for each sorted by channel.
+**Analysis**: Most videos on YouTube with views over 500 million are coming from licensed content. However, we found that there are some outliers. About 54 videos were unlicensed and 15 channels posted unlicensed videos that were also classified as the official video for the track. Perhaps what is more interesting is that accounts that claim to be official for major artists have posted unlicensed videos. Some channels say they are official, like Major Lazer Official or officialpsy, yet their videos are unlicensed and have amassed billions of views. Are these channels truly official? How can they get away with posting these unlicensed videos for such big songs? This question may not be answered with the data, but perhaps contacting a source related to law in the music industry might give us more insight. Bad Bunny is another especially interesting case as one of the world's most famous stars, yet a lot of his videos are unlicensed. There is no one consistent theme or trend between the channels that have posted unlicensed content, though it seems like some of them are from countries outside of the U.S. or rappers and DJs. REDBOX Entertainment also posted unlicensed videos, but it is not the movie company. Rather, after a quick YouTube search, we found that it is a channel for a music production company with 2.27 million subscribers that posts YouTube videos from mostly foreign artists. It seems like some channels are definitely repurposing content from an unverified user, like WORLDSTARHIPHOP or perhaps other content is remixes or live performances in the case of DJs. In doing pivot wider, we can filter for licensed and unlicensed content as well as official videos and view the total number of views for each sorted by channel. A lot more unlicensed content came from videos with less than 500 million views on accounts that were not official or recognizable names, like white noise for babies for example.  
 
 ```{r}
 ##Filter to create a new dataframe with YouTube videos that have over 500 million views
 youtube_high_views <- spotify_youtube %>%
   filter(views > 500000000)
+
 ##Trying to count how many licensed videos artists have
 youtube_high_views %>%
   group_by(artist) %>%
@@ -122,9 +132,11 @@ youtube_high_views %>%
     count_licensed = n()
   ) %>%
   arrange(desc(count_licensed))
+
 ##Filter for videos that are not licensed
 youtube_high_views %>%
   filter(licensed == FALSE) 
+
 ##Finding the amount of views for videos that are licensed and unlicensed and grouping it by channel
 high_views_licensing <- youtube_high_views %>%
   group_by(channel, licensed) %>%
@@ -179,14 +191,14 @@ high_views_official %>%
 
 **Question 4: How do collaborations or features on a song affect its popularity on Spotify and YouTube? What are the most popular collaborations?**
 
-**Analysis**: Some artists definitely seem to be more successful with their songs that have collaborators on the track compared to songs where they are the sole artist. We were trying to do a similar analysis to the question above using pivot_wider to compare the number of streams for songs with a collaborator and without so we could see which artists would be best to collaborate with if you want your song to reach the most people. We ran into an error trying to use pivot wider in the end, so we will definitely need to brainstorm more solutions that will move us past this dead end before we complete more analysis. Either way, Post Malone is the only artist who had streams in the top 10 for both a single song and a collaboration. Mackelmore and Ryan Lewis were also in the top 10 highest number of streams for their collaborative songs, but fall behind for single songs. Also, we noticed a complication with the data when doing an analysis like this to answer the question because songs will appear twice under the different artists' names even though it is the same song. This can be seen especially with Mackelmore and Ryan Lewis since the song appears under Mackelmore, Ryan Lewis and Mackelmore and Ryan Lewis. Industry Baby and Levitating also appear twice, once under each artist's name, throwing off the top 10 most streamed collaborative songs.
+**Analysis**: Some artists definitely seem to be more successful with their songs that have collaborators on the track compared to songs where they are the sole artist. We were trying to do a similar analysis to the question above using pivot_wider to compare the number of streams for songs with a collaborator and without so we could see which artists would be best to collaborate with if you want your song to reach the most people. We ran into an error trying to use pivot wider in the end, so we will definitely need to brainstorm more solutions that will move us past this dead end before we complete more analysis. Either way, Post Malone is the only artist who had streams in the top 10 for both a single song and a collaboration. Macklemore and Ryan Lewis were also in the top 10 highest number of streams for their collaborative songs, but fall behind for single songs. Also, we noticed a complication with the data when doing an analysis like this to answer the question because songs will appear twice under the different artists' names even though it is the same song. This can be seen especially with Macklemore and Ryan Lewis since the song appears under Macklemore, Ryan Lewis and Macklemore and Ryan Lewis. Industry Baby and Levitating also appear twice, once under each artist's name, throwing off the top 10 most streamed collaborative songs. Also, Macklemore only has collaborative songs as part of the data, so we cannot compare any songs he may have by himself as an artist to contrast success. After visualizing the artists with the top 10 collaborative songs and the top 10 songs without a feature, it is still a bit difficult to determine who benefits the most from collaborative tracks. For example, some of the tracks that are listed without "feat.," which we used to filter, are actually collaborative songs so it is hard to make judgements. Halsey and The Chainsmokers "Closer" is listed twice, once under each artist, as a solo song. So is "Sunflower" for Post Malone and Swae Lee. When comparing average streams for 11 popular artists between solo and collaborative songs, it was not necessarily clear which artist is best to work with if you want your songs to get more streams. Macklemore had the same average number of streams since he does not have any solo songs in the data. But for other artists, some had more success alone rather than others and the reverse is also true. Nicki Minaj had 364,889,147 more streams for her songs with collaborations than her solo music. Camila Cabello, Halsey, Justin Bieber, Lil Nas X and Post Malone, had higher average streams for songs that featured another artist compared to their solo tracks. 
 
 ```{r}
-##filtering to create a new dataframe that only includes songs that have one or more artists featured on the track including the main artist
+##Filtering to create a new dataframe that only includes songs that have one or more artists featured on the track including the main artist
 song_features <- spotify_youtube %>%
   filter(str_detect(track, 'feat.'))
 
-##sorting through the dataframe to find the artist who has the highest number of streams with a collaborator on their track
+##Sorting through the dataframe to find the artist who has the highest number of streams with a collaborator on their track
 song_features %>%
   group_by(artist, stream) %>%
   arrange(desc(stream))
@@ -195,7 +207,8 @@ spotify_youtube %>%
   group_by(artist) %>%
   filter(str_detect(track, 'feat.')) %>%
   arrange(desc(stream))
-##filtering for tracks where there are no collaborators and grouping it by artist in the order of highest streams to lowest
+
+##Filtering for tracks where there are no collaborators and grouping it by artist in the order of highest streams to lowest
 spotify_youtube %>%
   group_by(artist) %>%
   filter(!str_detect(track,'feat.')) %>%
@@ -206,13 +219,6 @@ spotify_youtube %>%
   group_by(track) %>%
   summarize(total_stream = sum(stream)) %>% 
   pivot_wider(names_from = track, values_from = total_stream)
-
-  
-##Notes for more investigation:
-  ##How to count how many features an artist has, issue of repeats where the same song is listed under more than one artist (Mackelmore and Ryan Lewis)
-  ##Try to see who collaboraters are for at least one artist who is more successful with someone else on their work
-  ##Find the average views for artists by themselves and then artist views with their collaborative work, filter for featured and then filter for not featured
-
 ```
 ```{r}
 ##Visualize top collaborative and single songs
@@ -242,7 +248,6 @@ top_10_alone %>%
   geom_bar(aes(x=reorder(artist, stream), weight=stream)) +
   coord_flip() +
     theme_minimal()
-
 ```
 
 ```{r}
@@ -265,26 +270,19 @@ spotify_youtube %>%
 
 ##Finding average streams for artists by themselves and with collaborators to see the benefits
 collab_average_streams <- spotify_youtube %>%
-  filter(artist == "Camila Cabello" | artist == "Lil Nas X" | artist == "Post Malone" | artist == "Dua Lipa" | artist == "Ed Sheeran" | artist == "Drake", str_detect(track,'feat.')) %>%
+  filter(artist == "Camila Cabello" | artist == "Lil Nas X" | artist == "Post Malone" | artist == "Dua Lipa" | artist == "Ed Sheeran" | artist == "Drake" | artist == "Halsey" | artist =="Swae Lee" | artist == "Justin Bieber" | artist =="Nicki Minaj" | artist == "Macklemore", str_detect(track,'feat.')) %>%
  group_by(artist) %>%
   summarise(
-    mean_stream = mean(stream)
+    mean_stream_collab = mean(stream)
   )
 
 non_collab_average_streams <- spotify_youtube %>%
-  filter(artist == "Camila Cabello" | artist == "Lil Nas X" | artist == "Post Malone" | artist == "Dua Lipa" | artist == "Ed Sheeran" | artist == "Drake") %>%
+  filter(artist == "Camila Cabello" | artist == "Lil Nas X" | artist == "Post Malone" | artist == "Dua Lipa" | artist == "Ed Sheeran" | artist == "Drake" | artist == "Halsey" | artist =="Swae Lee" | artist == "Justin Bieber" | artist =="Nicki Minaj" | artist == "Macklemore") %>%
  group_by(artist) %>%
   summarise(
-    mean_stream = mean(stream)
-  )
-
-
-##describe in one sentence what the collection of 10 songs represents, spot check
-##check average streams for solo and collab to compare for a small list of artists to see who actually does well
-##how would you restructure the data to make it actually useful
-##are some of the views and streams low because the songs had jsut come out when the data was collected?
+    mean_stream_non_collab = mean(stream)
+  ) %>%
 ```
-
 
 ##I played around with unique words for the descriptions of YouTube videos but then decided to ditch my efforts because they weren't really that relevant to any major newsworthy findings.
 
@@ -299,22 +297,24 @@ unique_words %>%
   count(word, sort = TRUE) %>%
   top_n(25) %>%
   mutate(word = reorder(word, n)) 
-
 ```
+
 **Question 5: Do singles or songs from full albums get more streams? What about views on YouTube? Which artists have more success with singles compared to full albums and vice versa?**
 
 **Analysis**: More well known American artists were in the top 10 highest views for YouTube videos coming from songs that were part of a full album. A lot of the singles were also songs that had collaborations between artists. None of the artists who had the top number of streams for singles also had the top number of streams for songs on a full album. Perhaps collaborative songs also perform better when they are a single rather than featured in an album. The highest number of streams for a song that came from an album was The Weeknd's "Blinding Lights" which had about a billion more streams than Halsey's "Closer" which is the top single with the most amount of streams. The top videos with the highest views for singles and regular album tracks were also much different than the results from the Spotify streams in these categories. What this could tell us is that maybe jsut because a song is popular does not mean the video to go with it will be as well. There are deeper visual aspects and social trends that may contribute more to the number of views on YouTube.  
 
 ```{r}
-##filtering for singles and arranging them from highest number of streams to lowest
+##Filtering for singles and arranging them from highest number of streams to lowest
 spotify_youtube %>%
   filter(album_type == "single") %>%
   arrange(desc(stream))
-##filtering for tracks from full albums and arranging them from highest number of streams to lowest 
+
+##Filtering for tracks from full albums and arranging them from highest number of streams to lowest 
 spotify_youtube %>%
   filter(album_type == "album") %>%
   arrange(desc(stream)) 
-##counting the number of singles and full album tracks each artist has
+
+##Counting the number of singles and full album tracks each artist has
 spotify_youtube %>%
   filter(album_type == "single") %>%
   group_by(artist) %>%
@@ -331,7 +331,7 @@ spotify_youtube %>%
   ) %>%
   arrange(desc(count_track))
 
-##counting the number of single videos and album track videos an artist has
+##Counting the number of single videos and album track videos an artist has
 youtube_high_views %>%
 filter(album_type == "single") %>%
   group_by(artist) %>%
@@ -347,7 +347,8 @@ filter(album_type == "album") %>%
     count_title = n()
   ) %>%
   arrange(desc(count_title))
-##arrange to see which videos have the highest number of views for singles and tracks from an album
+
+##Arrange to see which videos have the highest number of views for singles and tracks from an album
 youtube_high_views %>%
 filter(album_type == "single") %>%
   group_by(artist) %>%
@@ -357,8 +358,14 @@ youtube_high_views %>%
 filter(album_type == "album") %>%
   group_by(artist) %>%
   arrange(desc(views))
-
 ```
-**Our most newsworthy finding**
+
+**Our most newsworthy finding from milestone 4**
 So far, we think our most newsworthy piece of analysis comes from either the licensed and unlicensed content on YouTube or the analysis of artist collaborations. We think that once we are able to complete more analysis on artist collaborations, it would make for a really interesting article about who to feature on your track if you want your song to amass a lot of streams on Spotify. From what we have seen, there have not been any articles with a central focus along the lines of "Here's who to make songs with if you want them to take off," which we think could be an impactful finding in and around the music community. Also, with the consumption of video on the rise between TikTok and YouTube, we think it is newsworthy to question why certain channels have unlicensed content or how their videos can be official but unlicensed. As we learn more about how to navigate social media spaces in terms of regulating content and copyright, perhaps these findings can provide more insight for those who make social media rules or who work for the social media companies and are trying to limit unlicensed content. 
-**There are only 10 songs for each artist that show up every time analysis is done**
+
+**Final memo**
+  **Things to address in the memo: There are only 10 songs for each artist that show up every time analysis is done. Also it can be songs that have a youtube video to go with it because there is definitely a lot more music produced. Not representative of all music/artists. Caveat is that songs are listed more than once. How to restructure the data to make it actually useful**
+
+##describe in one sentence what the collection of 10 songs represents, spot check
+##how would you restructure the data to make it actually useful
+##are some of the views and streams low because the songs had just come out when the data was collected?
